# tasky

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  parser.py  server.py  tracker.py
tests/: __init__.py  test_parser.py  test_tracker.py
