[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tasky"
version = "0.1.0"
description = "AI-native personal task tracker for LLM agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Siddhant Jain", email = "post.siddhant@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["tasks", "todo", "ai", "llm", "agent", "productivity"]

[project.urls]
Homepage = "https://github.com/siddhantjain/tasky"
Repository = "https://github.com/siddhantjain/tasky"
Issues = "https://github.com/siddhantjain/tasky/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = []
